module(
    name = "bzd",
    version = "0.1",
)

bazel_dep(name = "bzd_lib", version = "1.0")
bazel_dep(name = "bzd_bdl", version = "1.0")
bazel_dep(name = "bzd_rules_doc", version = "1.0")
bazel_dep(name = "bzd_toolchain_cc", version = "1.0")
bazel_dep(name = "bzd_rules_nodejs", version = "1.0")
bazel_dep(name = "bzd_platforms", version = "1.0")
bazel_dep(name = "bzd_dns", version = "1.0")
bazel_dep(name = "bzd_sanitizer", version = "1.0")
bazel_dep(name = "bzd_package", version = "1.0")
bazel_dep(name = "bzd_bundle", version = "1.0")
bazel_dep(name = "bzd_rules_oci", version = "1.0")
bazel_dep(name = "bzd_python", version = "1.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "stardoc", version = "0.7.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")

# Override some of the modules that are local.
[local_path_override(
    module_name = name,
    path = "tools/bazel_build/modules/" + name,
) for name in (
    "bzd_lib",
    "bzd_bdl",
    "bzd_rules_doc",
    "bzd_toolchain_cc",
    "bzd_rules_nodejs",
    "bzd_rules_oci",
    "bzd_bundle",
    "bzd_platforms",
    "bzd_sanitizer",
    "bzd_package",
    "bzd_dns",
)]

local_path_override(
    module_name = "bzd_python",
    path = "python",
)

# Python

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//tools/python:requirements.txt",
)
use_repo(pip, "pip")

# C++

toolchain_cc = use_extension("@bzd_toolchain_cc//:extensions.bzl", "toolchain_cc")
toolchain_cc.toolchain(
    name = "clang",
    default = True,
    version = "clang_17.0.0",
)
use_repo(toolchain_cc, "clang")

register_toolchains("@clang//:all")

toolchain_cc.toolchain(
    name = "esp32",
    version = "esp32_gcc_12.2.0",
)
use_repo(toolchain_cc, "esp32")

register_toolchains("@esp32//:all")

toolchain_cc.toolchain(
    name = "gcc",
    version = "gcc_13.1.0",
)
use_repo(toolchain_cc, "gcc")

register_toolchains("@gcc//:all")

# Bdl

bdl_extension = use_extension("@bzd_bdl//:extensions.bzl", "bdl_extension")
bdl_extension.register(
    name = "cc",
    composition = "//cc/bdl/generator:composition",
    extension = "//cc/bdl:extension.bzl",
    format = "//cc/bdl/generator:format",
)

# NodeJs

toolchain_nodejs = use_extension("@bzd_rules_nodejs//:extensions.bzl", "toolchain_nodejs")
toolchain_nodejs.toolchain(
    name = "nodejs",
    default = True,
    version = "23.1.0",
)
use_repo(toolchain_nodejs, "nodejs")

register_toolchains("@nodejs//:all")

requirements_nodejs = use_extension("@bzd_rules_nodejs//:requirements.bzl", "requirements_nodejs")
requirements_nodejs.parse(
    name = "nodejs_deps",
    requirements = "//tools/nodejs:requirements.json",
)
use_repo(requirements_nodejs, "nodejs_deps")

# Docker

images = use_extension("@bzd_rules_oci//:extensions.bzl", "images")
images.install(
    name = "docker",
)
use_repo(images, "docker")

# Sanitizer

sanitizer = use_extension("@bzd_sanitizer//:extensions.bzl", "sanitizer")
sanitizer.clang_tidy(
    binary = "@clang//:clang_tidy",
    config = "//tools/cc:.clang-tidy",
)
sanitizer.mypy(
    binary = "//tools/python:mypy",
    config = "//tools/python:pyproject.toml",
)
