module(
    name = "bzd_python",
    version = "1.0",
)

bazel_dep(name = "bzd_lib", version = "1.0")
bazel_dep(name = "bzd_rules_doc", version = "1.0")
bazel_dep(name = "bzd_platforms", version = "1.0")
bazel_dep(name = "rules_python", version = "1.1.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bzd_python_pip",
    python_version = "3.12",
    requirements_lock = "@bzd_python//:requirements.txt",
)
use_repo(pip, "bzd_python_pip")
