module(
    name = "bzd_python",
    version = "1.0",
)

bazel_dep(name = "bzd_lib", version = "1.0")
bazel_dep(name = "bzd_rules_doc", version = "1.0")
bazel_dep(name = "bzd_platforms", version = "1.0")
bazel_dep(name = "bzd_rules_oci", version = "1.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.1.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bzd_python_pip",
    python_version = "3.12",
    requirements_lock = "@bzd_python//:requirements.txt",
)
use_repo(pip, "bzd_python_pip")

images = use_extension("@bzd_rules_oci//:extensions.bzl", "images")
images.pull(
    name = "oci_minimal",
    digest = "sha256:00a24d7c50ebe46934e31f6154c0434e2ab51259a65e028be42413c636385f7f",
    image = "index.docker.io/library/debian",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(images, "oci_minimal")
