load("@bzd_lib//config:defs.bzl", "bzd_config_default")
load("@bzd_rules_nodejs//nodejs:defs.bzl", "bzd_nodejs_oci_binary")

exports_files([
    "api.v1.json",
])

bzd_config_default(
    name = "config",
    srcs = [
        "config.default.json",
    ],
    visibility = [
        ":__subpackages__",
        "//deployment:__subpackages__",
    ],
)

bzd_nodejs_oci_binary(
    name = "accounts",
    binary = "//apps/accounts/backend",
    cmd = [
        "--static",
        "apps/accounts/frontend/frontend.bundle",
    ],
    tags = ["manual"],
    visibility = [
        "//deployment:__subpackages__",
    ],
)
