load("@bzd_rules_oci//:defs.bzl", "bzd_oci_binary")

exports_files(
    [
        "api.v1.json",
    ],
    visibility = [
        "//apps/artifacts/backend:__pkg__",
        "//apps/artifacts/frontend:__pkg__",
    ],
)

bzd_oci_binary(
    name = "artifacts",
    binary = "//apps/artifacts/backend",
    cmd = [
        "--static",
        "apps/artifacts/frontend/frontend.bundle",
    ],
    tags = ["manual"],
    visibility = [
        "//deployment:__subpackages__",
    ],
)
