load("@bzd_rules_oci//:defs.bzl", "bzd_oci_binary")

exports_files(
    [
        "api.v1.json",
    ],
    visibility = [
        "//apps/dashboard/backend:__pkg__",
        "//apps/dashboard/frontend:__pkg__",
    ],
)

bzd_oci_binary(
    name = "dashboard",
    binary = "//apps/dashboard/backend",
    cmd = [
        "--static",
        "apps/dashboard/frontend/frontend.bundle",
    ],
    tags = ["manual"],
    visibility = [
        "//deployment:__subpackages__",
    ],
)
