load("@bzd_rules_nodejs//nodejs:defs.bzl", "bzd_nodejs_oci_binary")

exports_files(
    [
        "api.v1.json",
    ],
    visibility = [
        "//apps/dashboard/backend:__pkg__",
        "//apps/dashboard/frontend:__pkg__",
    ],
)

bzd_nodejs_oci_binary(
    name = "dashboard",
    binary = "//apps/dashboard/backend",
    cmd = [
        "--static",
        "apps/dashboard/frontend/frontend.bundle",
    ],
    visibility = [
        "//deployment:__subpackages__",
    ],
)
