load("@bzd_rules_oci//:defs.bzl", "bzd_oci_binary")

exports_files(
    [
        "api.v1.json",
        "jobs.json",
    ],
    visibility = [
        "//apps/job_executor/backend:__pkg__",
        "//apps/job_executor/frontend:__pkg__",
    ],
)

bzd_oci_binary(
    name = "job_executor",
    binary = "//apps/job_executor/backend",
    cmd = [
        "--static",
        "apps/job_executor/frontend/frontend.bundle",
    ],
    tags = ["manual"],
    visibility = [
        "//deployment:__subpackages__",
    ],
)
