load("@bzd_bundle//:defs.bzl", "bzd_bundle_binary")
load("@bzd_lib//config:defs.bzl", "bzd_config")
load("@rules_python//python:defs.bzl", "py_binary")
load("//apps/bootloader:defs.bzl", "bzd_bootloader_binary")

py_binary(
    name = "client",
    srcs = [
        "client.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//apps/node_manager/private/client/command:shutdown",
        "//apps/node_manager/private/client/command:suspend",
        "//apps/node_manager/private/client/command:wake_on_lan",
    ],
)

py_binary(
    name = "node_manager",
    srcs = [
        "node_manager.py",
    ],
    deps = [
        "//apps/artifacts/api/python/node",
        "//apps/node_manager/private/server:monitor",
        "//apps/node_manager/private/server:power",
        "@bzd_python//bzd/http:server",
        "@bzd_python//bzd/sync:singleton",
        "@bzd_python//bzd/utils:scheduler",
    ],
)

bzd_config(
    name = "bootloader_config",
    base = "//apps/bootloader:config.base",
    data = [
        ":node_manager",
    ],
    values = {
        "application": "apps/node_manager/node_manager",
        "updatePath": "bzd/apps/node_manager",
    },
)

bzd_bootloader_binary(
    name = "with_bootloader",
    configs = {
        "//apps/bootloader:config": ":bootloader_config",
    },
)

bzd_bundle_binary(
    name = "bundle",
    compression = "gz",
    executable = ":with_bootloader",
    tags = ["manual"],
    visibility = ["//deployment:__subpackages__"],
)
