load("@bzd_rules_nodejs//nodejs:defs.bzl", "bzd_nodejs_library")

bzd_nodejs_library(
    name = "authentication",
    srcs = [
        "authentication.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
    ],
)

bzd_nodejs_library(
    name = "log",
    srcs = [
        "log.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":format",
    ],
)

bzd_nodejs_library(
    name = "exception",
    srcs = [
        "exception.js",
        "//nodejs/core/impl/exception:backend.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":format",
        ":log",
    ],
)

bzd_nodejs_library(
    name = "event",
    srcs = [
        "event.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "format",
    srcs = [
        "format.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "cache",
    srcs = [
        "cache.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":event",
        ":exception",
        ":log",
    ],
)

bzd_nodejs_library(
    name = "cache2",
    srcs = [
        "cache2.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        ":log",
        "//nodejs/core/services",
        "//nodejs/core/statistics:provider",
    ],
)

bzd_nodejs_library(
    name = "cookie",
    srcs = [
        "cookie.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "crypto",
    srcs = [
        "crypto.js",
        "//nodejs/core/impl/crypto:backend.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
    ],
)

bzd_nodejs_library(
    name = "lock_file",
    srcs = [
        "lock_file.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        ":filesystem",
        "//nodejs/core/clock:date",
        "//nodejs/utils:pathlib",
    ],
)

bzd_nodejs_library(
    name = "lock",
    srcs = [
        "lock.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "filesystem",
    srcs = [
        "filesystem.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "localstorage",
    srcs = [
        "localstorage.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "mutex",
    srcs = [
        "mutex.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "router",
    srcs = [
        "router.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        "//nodejs/utils:regexpr",
    ],
)

bzd_nodejs_library(
    name = "script",
    srcs = [
        "script.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "sessionstorage",
    srcs = [
        "sessionstorage.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "stream",
    srcs = [
        "stream.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "template",
    srcs = [
        "template.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        ":filesystem",
    ],
)

bzd_nodejs_library(
    name = "timeseries",
    srcs = [
        "timeseries.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        ":log",
    ],
)

bzd_nodejs_library(
    name = "upload",
    srcs = [
        "upload.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "validation_schema",
    srcs = [
        "validation_schema.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        "//nodejs/utils:object",
        "//nodejs/utils:result",
    ],
)

bzd_nodejs_library(
    name = "validation",
    srcs = [
        "validation.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        ":format",
        "//nodejs/utils:result",
    ],
)
