load("@bzd_rules_nodejs//nodejs:defs.bzl", "bzd_nodejs_library")

bzd_nodejs_library(
    name = "array",
    srcs = [
        "array.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "color",
    srcs = [
        "color.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nodejs/core:exception",
    ],
)

bzd_nodejs_library(
    name = "delay",
    srcs = [
        "delay.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "object",
    srcs = [
        "object.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "optional",
    srcs = [
        "optional.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nodejs/core:exception",
    ],
)

bzd_nodejs_library(
    name = "query",
    srcs = [
        "query.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "pathlib",
    srcs = [
        "pathlib.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nodejs/core:exception",
    ],
)

bzd_nodejs_library(
    name = "run",
    srcs = [
        "run.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nodejs/core:event",
        "//nodejs/core:exception",
    ],
)

bzd_nodejs_library(
    name = "to_string",
    srcs = [
        "to_string.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nodejs/core:exception",
        "//nodejs/core:format",
    ],
)

bzd_nodejs_library(
    name = "uid",
    srcs = [
        "uid.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "regexpr",
    srcs = [
        "regexpr.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "result",
    srcs = [
        "result.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nodejs/core:exception",
        "//nodejs/core:format",
    ],
)

bzd_nodejs_library(
    name = "timestamp",
    srcs = [
        "timestamp.js",
    ],
    visibility = ["//visibility:public"],
)
